--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+*{
+    outline:2px solid ellow;
+}
 body{
     margin:0px;
-    overflow:hidden;
+    overflow:hiddn;
 }
 
 /* ________________LINK STYLING______________________*/
@@ -117,4 +120,43 @@ p{
     top: 0;
     left:0;
     }
+    
+.slogan{
+    display:inline-block;
+    transform: translate(1000px, -675px); transform-origin: 50% 50%;
+    font-size: 50px;
+    position:relative;
+    padding: 25px;
+    text-align:center;
+
+}
+
+.top-left{
+    position: absolute;
+    top:0;
+    left:-2px;
+
+}
+
+.top-right{
+    position: absolute;
+    top:0;
+    right :0;
+  
+}
+
+.bottom-left{
+    position: absolute;
+    bottom:0;
+    left :0;
+  
+}
+
+.bottom-right{
+    position: absolute;
+    bottom:0;
+    right :0;
+  
+}
+
 
