--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 *{
+    margin:0px;
+    padding: 0px;
     outline:2px solid ellow;
 }
 body{
     margin:0px;
-    overflow:hiddn;
+    overflow:;
 }
 
 /* ________________LINK STYLING______________________*/
@@ -13,9 +15,9 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 40%;
-    position:absolute;
-    top: 200px; 
+    width: 100px;
+    position:fixed;
+    top: 200px;  
 }
 
 /* styling the link */
@@ -48,9 +50,10 @@ p{
 
 /* general styling for both gradient containers */
 .grad-gen{
-
+    margin:0px;
+    overflow:hidden;
     /* positioning */
-    position:absolute;
+    position:fixed;
     width: 50vw;
     height: 50vh;
     /* creating gradient */
@@ -63,9 +66,9 @@ p{
     border-radius:30%;
     transform:rotate(30deg);
     /* putting gradient behind glass */
-    z-index:-1;
+    z-index:-10;
     /* creating animation */
-    animation:change 15s ease-in-out infinite;
+   
         }
 
 
@@ -73,13 +76,18 @@ p{
 #grad-0{
     right:50px;
     opacity: 25%;
+    width:500px ;
+    height:500px;
+    animation: rotation 70s infinite linear;
 }
 
 /*specific styling for second gradient container */
 #grad-1{
-    height: 70vh;
+    height:70vh;
     right:35px;
     transform: rotate(75deg);
+    animation:change 45s ease-in-out infinite;
+  
 }
 
 
@@ -89,31 +97,44 @@ p{
     0%{
         background-position:0% 100% ;
         top:10px;
-
     }
-
-
-
-
-
     50%{
         background-position:100% 0% ;
         top:180px;
     }
-
-
-
     100%{
         background-position:0% 100% ;
         top:10px;
     }
 }
 
+@keyframes rotation{
+
+    0%{
+        background-position:0% 100% ;
+         top:250px; 
+         transform:rotate(0deg); 
+    }
+    50%{
+        background-position:100% 0% ;
+        top:10px;
+        rotate:(180deg) ;
+    }
+    100%{
+        background-position:0% 100% ;
+         top:250px;
+         transform:rotate(360deg);
+       
+    }
+
+
+}
+
 
 
 /* glass in front of gradient containers.This adds a blur effect */
 #glass{
-    height: 100vh;
+    height: 300vh;
     width: 100vw;
     background-color:rgba(255,255,255,0.2);
     backdrop-filter: blur(5px);
@@ -123,14 +144,26 @@ p{
     
 .slogan{
     display:inline-block;
-    transform: translate(1000px, -675px); transform-origin: 50% 50%;
-    font-size: 50px;
-    position:relative;
-    padding: 25px;
+    /* transform: translate(1000px, -2800px); transform-origin: 50% 50%; */
+   
     text-align:center;
+    position: absolute;
+    top: 70px;
+    left:1000px;
 
 }
 
+.slogan-corner{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.slogan-text{
+    font-size:60px ;
+
+}
+/* 
 .top-left{
     position: absolute;
     top:0;
@@ -157,6 +190,6 @@ p{
     bottom:0;
     right :0;
   
-}
+} */
 
 
