--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin:0px;
     padding: 0px;
-    outline:2px solid yellow;
+    outline:2px solid ellow;
 }
 body{
     margin:0px;
@@ -26,11 +26,13 @@ li a {
     color: #000;
     padding: 15px 200px;
     text-decoration: none;
+    transition:0.5s;
 }
 
 /* link gets larger on hover */
 li a:hover {
     font-size: larger;
+    
 }
 
 
@@ -49,30 +51,30 @@ p{
 /* _________________GRADIENT EFFECT______________________*/
 
 /* general styling for both gradient containers */
-.grad-gen{
+/*.grad-gen{
     margin:0px;
     overflow:hidden;
-    /* positioning */
+    /* positioning /
     position:fixed;
     width: 50vw;
     height: 50vh;
-    /* creating gradient */
+    /* creating gradient /
     background-image: radial-gradient(circle at 15% 100%,#1C3879,
     #607EAA,
     #7F557D,
     #FF6392,#CCFF66);
-    /*extra styling */
+    /*extra styling /
     background-size: 200% 500%; 
     border-radius:30%;
-    transform:rotate(30deg);
-    /* putting gradient behind glass */
+  
+    /* putting gradient behind glass /
     z-index:-10;
     /* creating animation */
    
         }
 
 
-  /* specific styling for first gradient container */
+  /* specific styling for first gradient container /
 #grad-0{
     right:200px;
     opacity: 25%;
@@ -83,7 +85,7 @@ p{
     box-shadow: #000;
 }
 
-/*specific styling for second gradient container */
+/*specific styling for second gradient container /
 #grad-1{
     height:40vh;
     width:40vh;
@@ -96,7 +98,7 @@ p{
 
 
 
-/* key frames to define animation movement */
+/* key frames to define animation movement /
 @keyframes change{
     0%{
         background-position:0% 100% ;
@@ -136,17 +138,23 @@ p{
 
 
 }
+*/
+
+
+
+
 
 
 
 /* glass in front of gradient containers.This adds a blur effect */
 #glass{
-    height: 300vh;
+    height: 100vh;
     width: 100vw;
     background-color:rgba(255,255,255,0.2);
     backdrop-filter: blur(5px);
     top: 0;
     left:0;
+    position: fixed;
     }
     
 .slogan{
@@ -156,7 +164,8 @@ p{
     text-align:center;
     position: absolute;
     top: 70px;
-    left:1000px;
+    left:850px;
+    width:800px;
 
 }
 
@@ -172,48 +181,75 @@ p{
 }
 
 .content{
-    width:630px ;
+    width:700px ;
     display: grid;
     gap:20px 0px;
-    grid-template-columns:repeat(3,3fr);
-
+    grid-template-columns:repeat(2,2fr);
     position:absolute;
-    top:1800px ;
-    left: 100px;
+    top:270px ;
+    right: 300px;
 }
 .content-glass{
     height: 300px;
-    width: 100px;
-    background-color:rgba(255, 255, 255, 0.297);
-    backdrop-filter: blur(5px);
-}
-/* 
-.top-left{
-    position: absolute;
-    top:0;
-    left:-2px;
-
+    margin:0px 20px ;
+    background-color:rgba(178, 174, 174, 0.3);
+    backdrop-filter: blur(40px);
+    border-radius:10%;
+    box-shadow: grey 10px 15px 15px; 
+    transition:0.5s;
 }
 
-.top-right{
-    position: absolute;
-    top:0;
-    right :0;
+.content-glass:hover{
+    box-shadow:grey 10px 15px 15px, rgba(255, 255, 0, 0.209) 20px 25px 25px ;
+    
+
+}
+.image-in-glass {
+     display: flex;
+     justify-items: center;
+     justify-content: space-between;
+     flex-direction: column;
+     align-items: center;
+     padding: 20px;
+
+     /* grid-template-columns:repeat(1,1fr); */
+
   
 }
 
-.bottom-left{
-    position: absolute;
-    bottom:0;
-    left :0;
-  
+.image-in-glass img{
+
 }
 
-.bottom-right{
-    position: absolute;
-    bottom:0;
-    right :0;
-  
-} */
+.vertical-rule{
+    position:absolute;
+    top:0px;
+    left:500px;
+    width: 2px;
+    height: 100vh;
+    /* background-color: 
+    black;  */
+    background-image:linear-gradient(#CCFF66,#FF6392,#7F557D,#607EAA,#1C3879);
+    background-size: 200% 500%;
+    animation:vrule 20s ease-in-out infinite;
+}
+
+@keyframes vrule{
+    0%{
+        background-position:0% 100% ;
+    }
+    50%{
+        background-position:100% 0% ;
+      
+    }
+    100%{
+        background-position:0% 100% ;
+        
+    }
+}
+
+
+
+
 
 
