--- a/style.css
+++ b/style.css
@@ -7,153 +7,135 @@ body{
     margin:0px;
 }
 
-/* ________________LINK STYLING______________________*/
+/* ********************************************************** */
+/* ________________BACKGROUND______________________*/
 
-/* styling and positioning the link container */
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100px;
-    position:fixed;
-    top: 200px;  
-}
-
-/* styling the link */
-li a {
-    display: block;
-    color:pink;
-    padding: 15px 200px;
-    text-decoration: none;
-    font-size: 40px;
-    text-shadow: pink 5px 5px 10px;
-    transition:0.8s;
-    
-}
-
-/* link gets larger on hover */
-li a:hover {
-    font-size: 45px;
-    box-shadow:pink 10px 10px 15px ;
-    
-}
-
-/* ________________GLASS______________________*/
-/* glass in front of gradient containers.This adds a blur effect */
+/* GLASS (adds a blur effect to floating squares and gradient image) */
 #glass{
     height: 100vh;
     width: 100vw;
+    /* grey background color */
     background-color:rgba(255,255,255,0.2);
-
+    /*blur */
     backdrop-filter: blur(10px);
-    
+    /*giving it a  position of fixed so that it doesnt move when you scroll*/
     position:fixed;
+}
+
+
+/*SMALL FLOATING SQUARES ON THE LEFT */
+
+/* general styling for both gradient containers */
+.grad-gen{
+    margin:0px;
+
+    /* positioning */
+    position:fixed;
+    width: 20px;
+    height: 20px;
+
+    /* creating gradient */
+    background-image: radial-gradient(circle at 15% 100%,#1C3879,
+    #607EAA,
+    #7F557D,
+    #FF6392,#CCFF66);
+
+    /*zoomig in on background */
+    background-size: 200% 500%; 
+
+    /* smoothing out edges */
+    border-radius:30%;
+
+    /* putting gradient behind glass */
+    z-index:-5;
+}
+
+
+  /* specific styling for first gradient container */
+#grad-0{
+    left:200px;
+    opacity:100%;
+    background-image: radial-gradient(circle at 15% 100%,#CCFF66,#FF6392,#7F557D, #607EAA,#1C3879);
+    animation: rotation 20s ease-in-out infinite ;
+    box-shadow: #000;
+    opacity: 40%;
+}
+
+/* key frames to define animation movement */
+@keyframes rotation{
+
+    0%{
+        background-position:0% 100% ;
+         top:950px; 
+         transform:rotate(0deg); 
+         transform: scale(1);
+    }
+    40%{
+        transform: scale(4);
+        top:0px;
+
+    }
+    70%{
+        background-position:100% 0% ;
+        
+        rotate:(180deg) ;
+        transform: scale(2);
     }
     
-/* ________________SLOGAN______________________*/
-.slogan{
-    display:inline-block;
-    /* transform: translate(1000px, -2800px); transform-origin: 50% 50%; */
-   
-    text-align:center;
-    position: absolute;
-    top: 70px;
-    left:850px;
-    width:800px;
-
-}
-
-.slogan-corner{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.slogan-text{
-    font-size:60px ;
-    color: pink;
-
-
-}
-
-/* ________________CONTENT______________________*/
-.content{
-    width:700px ;
-    display: grid;
-    gap:20px 0px;
-    grid-template-columns:repeat(2,2fr);
-    position:absolute;
-    top:270px ;
-    right: 300px;
-}
-.content-glass{
-    height: 300px;
-    margin:0px 20px ;
-    background-color:rgba(178, 174, 174, 0.3);
-    backdrop-filter: blur(40px);
-    border-radius:10%;
-    box-shadow: pink 5px 5px 20px; 
-    transition:0.5s;
-}
-
-/* .content-glass:hover{
-    box-shadow:grey 10px 15px 15px, rgba(255, 255, 0, 0.209) 20px 25px 25px ;
+    100%{
+        background-position:0% 100% ;
+        top:950px;
+        transform:rotate(360deg);
+        transform: scale(1);
     
-} */
+    }
 
 
- .content-glass:hover{
-    box-shadow: rgb(255, 151, 168) 20px 20px 30px ;
-    
 }
 
-
-.image-in-glass {
-    display: flex;
-    justify-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-
-     /* grid-template-columns:repeat(1,1fr); */
-
+/*specific styling for second gradient container */
+#grad-1{
+    
+    transform: rotate(75deg);
+    background-image: radial-gradient(circle at 15% 100%,#CCFF66,#FF6392,#7F557D #607EAA,#1C3879,);
+    animation:change 20s ease-in-out infinite;
+    opacity: 50%;
   
 }
 
-
-
-.vertical-rule{
-    position:absolute;
-    top:0px;
-    left:500px;
-    width: 2px;
-    height: 100vh;
-    background-image:linear-gradient(#CCFF66,#FF6392,#7F557D,#607EAA,#1C3879);
-    background-size: 200% 500%;
-    animation:vrule 20s ease-in-out infinite;
-}
-
-@keyframes vrule{
+/* key frames to define animation movement */
+@keyframes change{
     0%{
         background-position:0% 100% ;
+        top:715px;
+        transform:rotate(0deg);
+        transform: scale(3);
+       
     }
     50%{
         background-position:100% 0% ;
-      
+        top:380px;
+        transform:rotate(180deg);
+        transform: scale(1);
     }
     100%{
         background-position:0% 100% ;
-        
+        top:715px;
+        transform:rotate(360deg);
+        transform: scale(3);
     }
 }
 
+
+
+
+/*GRADIENT IMAGE ON THE RIGHT */
 .grad-pic{
     position:fixed;
     right:-350px;
     transform:scale(1.1);
     z-index:-10;
-    animation: gra-pic 50s ease-in-out infinite;
+    animation: gra-pic 40s ease-in-out infinite;
 
 }
 
@@ -206,111 +188,201 @@ li a:hover {
     }
 }
 
+/* ************************************************************ */
+/* ________________NAV-BAR______________________*/
 
-
-
-
-/*****************************************************/
-
-/* _________________GRADIENT EFFECT______________________*/
-
-/* general styling for both gradient containers */
-.grad-gen{
-    margin:0px;
-    /* positioning */
+/* styling and positioning the link container */
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100px;
     position:fixed;
-    width: 20px;
-    height: 20px;
-    /* creating gradient */
-    background-image: radial-gradient(circle at 15% 100%,#1C3879,
-    #607EAA,
-    #7F557D,
-    #FF6392,#CCFF66);
-    /*extra styling */
-    background-size: 200% 500%; 
-    border-radius:30%;
-    /* putting gradient behind glass */
-    z-index:-5;
-    /* creating animation */
-
+    top:250px;  
 }
 
-
-  /* specific styling for first gradient container */
-#grad-0{
-    left:200px;
-    opacity:100%;
-    background-image: radial-gradient(circle at 15% 100%,#CCFF66,#FF6392,#7F557D, #607EAA,#1C3879);
-    animation: rotation 20s ease-in-out infinite ;
-    box-shadow: #000;
-    opacity: 40%;
-}
-
-/*specific styling for second gradient container */
-#grad-1{
+/* styling the link */
+li a {
+    display: block;
+    color:#FF79BC;
+    padding: 25px 200px;
+    text-decoration: none;
+    font-size: 40px;
+    text-shadow: pink 5px 5px 10px;
+    transition:0.8s;
     
-    transform: rotate(75deg);
-    background-image: radial-gradient(circle at 15% 100%,#CCFF66,#FF6392,#7F557D #607EAA,#1C3879,);
-    animation:change 20s ease-in-out infinite;
-    opacity: 50%;
+}
+
+/* link gets larger on hover */
+li a:hover {
+    font-size: 45px;
+    box-shadow:pink 10px 10px 15px ;
+    
+}
+
+
+/* *************************************************** */
+/* ________________HEADING______________________*/
+.heading{
+    display:inline-block;
+    text-align:center;
+    position: absolute;
+    top: 70px;
+    left:850px;
+    width:800px;
+    box-shadow: rgb(157, 92, 103) 2px 2px 4px;
+
+}
+
+
+    
+
+
+
+
+.heading-corner{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+
+
+.heading-text p{
+    font-size:60px ;
+    color: #FF79BC;
+    /* text-shadow: rgb(157, 92, 103) 2px 2px 10px ; */
+    animation:hovr 3s ease-in-out infinite;
+  
+    
+}
+@keyframes hovr{
+    0%{
+        box-shadow: rgb(157, 92, 103) 2px 2px 4px;
+        
+       
+    }
+    50%{
+        box-shadow: rgb(157, 92, 103) 5px 5px 7px;
+      
+    }
+    100%{
+        box-shadow: rgb(157, 92, 103) 2px 2px 4px;
+        
+    }
+}
+
+
+@keyframes hover{
+    0%{
+        text-shadow: rgb(157, 92, 103) 2px 2px 10px;
+       
+    }
+    50%{
+        text-shadow: rgb(157, 92, 103) 10px 10px 7px;
+      
+    }
+    100%{
+        text-shadow: rgb(157, 92, 103) 2px 2px 10px;
+        
+    }
+}
+
+
+
+/* *************************************************** */
+/* ________________CONTENT______________________*/
+.content{
+    width:700px ;
+    display: grid;
+    gap:20px 0px;
+    grid-template-columns:repeat(2,2fr);
+    position:absolute;
+    top:270px ;
+    right: 300px;
+}
+.content-glass{
+    height: 300px;
+    margin:0px 20px ;
+    background-color:rgba(178, 174, 174, 0.3);
+    backdrop-filter: blur(40px);
+    border-radius:10%;
+    box-shadow: #FF79BC 5px 5px 20px; 
+    transition:0.5s;
+}
+
+/* .content-glass:hover{
+    box-shadow:grey 10px 15px 15px, rgba(255, 255, 0, 0.209) 20px 25px 25px ;
+    
+} */
+
+
+ .content-glass:hover{
+    box-shadow: rgb(255, 151, 168) 20px 20px 30px ;
+    
+}
+
+
+.image-in-glass {
+    display: flex;
+    justify-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+
+     /* grid-template-columns:repeat(1,1fr); */
+
   
 }
 
 
+/* ***************************************************************8 */
+ /*____________________ VERTICAL RULE________________ */
+/* vertical rule */
+.vertical-rule{
+    position:absolute;
+    top:0px;
+    left:600px;
+    width:2px;
+    height: 100vh;
+    background-image:linear-gradient(#CCFF66,#FF6392,#7F557D,#607EAA,#1C3879);
+    background-size: 200% 500%;
+    animation:vrule 20s ease-in-out infinite;
+}
 
-/* key frames to define animation movement */
-@keyframes change{
+@keyframes vrule{
     0%{
         background-position:0% 100% ;
-        top:715px;
-        transform:rotate(0deg);
-        transform: scale(3);
-       
     }
     50%{
         background-position:100% 0% ;
-        top:380px;
-        transform:rotate(180deg);
-        transform: scale(1);
+      
     }
     100%{
         background-position:0% 100% ;
-        top:715px;
-        transform:rotate(360deg);
-        transform: scale(3);
-    }
-}
-
-@keyframes rotation{
-
-    0%{
-        background-position:0% 100% ;
-         top:950px; 
-         transform:rotate(0deg); 
-         transform: scale(1);
-    }
-    40%{
-        transform: scale(4);
-        top:0px;
-
-    }
-    70%{
-        background-position:100% 0% ;
         
-        rotate:(180deg) ;
-        transform: scale(2);
     }
-    
-    100%{
-        background-position:0% 100% ;
-         top:950px;
-         transform:rotate(360deg);
-         transform: scale(1);
-       
-    }
-
-
 }
+
+/* ***************************************************** */
+ /*_________________LOGO_________________  */
+
+
+.logo{
+    position:fixed;
+    top:90px;
+    left: 70px;
+}
+
+
+
+
+
+
+
+
 
 
 
